<resources>
    <string name="app_name">HeadhunterHunter</string>
    <string name="currentItem">Headhunter</string>
    <string name="priceInChaos">Price in Chaos</string>
    <string name="priceInExalted">Price in Exalted</string>
    <string name="imageExalted">Image of Exalted Orb</string>
    <string name="imageChaos">Image of Chaos Orb</string>
    <string name="imageItem">Image of Chosen Item</string>
    <string name="title_activity_settings">Settings</string>
    <string name="apiInfo">All item data supplied by poe.ninja</string>
    <string name="settings">Item Selection</string>
    <string name="configuration">Item Configuration: </string>
    <string name="back">Back</string>

    <string-array name="itemNameArray">
        <item>Headhunter</item>
        <item>The Halcyon</item>
        <item>Unnatural Instinct</item>
        <item>Inspired Learning</item>
        <item>The Doctor</item>
        <item>House of Mirrors</item>
    </string-array>

    <string-array name="itemUrlArray">
        <item>https://poe.ninja/api/data/itemhistory?league=Delirium&amp;type=UniqueAccessory&amp;itemId=607</item>
        <item>https://poe.ninja/api/data/itemhistory?league=Delirium&amp;type=UniqueJewel&amp;itemId=7376</item>
        <item>https://poe.ninja/api/data/itemhistory?league=Delirium&amp;type=UniqueJewel&amp;itemId=676</item>
        <item>https://poe.ninja/api/data/itemhistory?league=Delirium&amp;type=DivinationCard&amp;itemId=636</item>
        <item>https://poe.ninja/api/data/itemhistory?league=Delirium&amp;type=DivinationCard&amp;itemId=1476</item>
        <item>https://poe.ninja/api/data/itemhistory?league=Delirium&amp;type=UniqueAccessory&amp;itemId=1961</item>
    </string-array>
</resources>
